<resources>
    <string name="app_name">Casa Sagres App</string>
    <string name="nao_temconta">Não é cadastrado ainda? \n Cadastre-se agora!</string>
    <string name="botao_login">Logar</string>
    <string name="digite_senha">Digite sua Senha</string>
    <string name="digite_email">Digite seu Email</string>
    <string name="cadastro">Cadastro</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="digite_sobrenome">Digite seu Sobrenome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sair">Deslogar</string>
    <string name="title_activity_catalogo">CatalogoActivity</string>
</resources>
