<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activitys.CadastroActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/cadastro"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColorHint="@android:color/white"
        app:hintTextAppearance="@style/EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nome"
            android:singleLine="false"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/EditTextTheme"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_sobrenome"
            android:shadowColor="@android:color/white"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/EditTextTheme"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_email"
            android:inputType="textEmailAddress"
            android:shadowColor="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/EditTextTheme"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_senha"

            android:inputType="textPassword"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:theme="@style/botaoLoginCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>